# aidocs

./: .GEMINI.md.~undo-tree~  .gitignore  GEMINI.md  LICENSE  README.md  aidocs.md  pyproject.toml  setup.py
aidocs_pkg/: __init__.py  main.py
tests/: test_main.py
